yaml/webhook-with-configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repimage
  namespace: kube-system
  labels:
    app: repimage
spec:
  replicas: 1
  template:
    metadata:
      name: repimage
      labels:
        app: repimage
    spec:
      containers:
        - name: webhook
          image: registry.cn-beijing.aliyuncs.com/laoq/repimage:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          command:
            - /repimage
          volumeMounts:
            - name: allowlist
              mountPath: /config
      volumes:
        - name: allowlist
          configMap:
            name: repimage-allowlist
      restartPolicy: Always
  selector:
    matchLabels:
      app: repimage
---
apiVersion: v1
kind: Service
metadata:
  name: repimage
  namespace: kube-system
spec:
  selector:
    app: repimage
  ports:
    - port: 443
      targetPort: 8080
  type: ClusterIP
