yaml/admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: repimage
  namespace: kube-system
  annotations:
    cert-manager.io/inject-ca-from: kube-system/repimage-webhook-cert
webhooks:
  - name: repimage.kube-system.svc
    #    namespaceSelector:
    #      matchExpressions:
    #        - key: type
    #          operator: In
    #          values: [ "tenant" ]
    rules:
      - operations: [ "CREATE","UPDATE" ]
        apiGroups: [ "" ]
        apiVersions: [ "v1" ]
        resources: [ "pods" ]
    admissionReviewVersions: [ "v1","v1bate1" ]
    clientConfig:
      service:
        name: repimage
        namespace: kube-system
        path: /pods
    sideEffects: NoneOnDryRun
    failurePolicy: Fail
