yaml/mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: repimage
  namespace: kube-system
  labels:
    app: repimage
webhooks:
- admissionReviewVersions:
  - v1
  - v1bate1
  clientConfig:
    caBundle: |
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREekNDQWZlZ0F3SUJBZ0lVT21RakdrTFh1
[...]
      c3pLYUQyMHM5a1E9PQotLS0tLUVORCBDRVJUSUZJQ0FURS0tLS0tCg==
    service:
      name: repimage
      namespace: kube-system
      path: /pods
  failurePolicy: Ignore
  name: repimage.kube-system.svc
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
  sideEffects: NoneOnDryRun
